# riscwaves

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: github-pages-build.yml
docs/: ADR-UI via Pixels.md
src/: lib.rs  world.rs
www/: index.html
