[package]
name = "riscwaves"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
log = "0.4"
pixels = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Document", "Window", "ImageData", "MouseEvent", "DeviceMotionEvent"] }
js-sys = "0.3"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1


