[package]
name = "riscwaves"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
log = "0.4"
error-iter = "0.4.1"
pixels = "0.15"
winit = "0.29"
winit_input_helper = "0.15.0"
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat","Performance"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1


[profile.dev]
opt-level = 0
lto = false
debug = true
codegen-units = 256  # Maximum parallelization
incremental = true



